--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </main>
   <body>
     <main>
-    <section id="Home">
+    <section class="Home">
       <h1 class='Geral'>Currículo</h1>
       <p>
         Profissional com 1 ano e 4 meses de experiência como assistente de
@@ -29,6 +29,9 @@
         foco em Front-end, <br> onde possa aplicar minha paixão pela tecnologia e meu
         desejo de crescimento <br>profissional.
       </p>
+    <div class="container">
+        <img src="Img/Rubia Polli.jpg" alt="">
+    </div>
       <h2 class='Experiência'>Experiências</h2>
       <ul>
         <li>
